--- a/front-end/index.html
+++ b/front-end/index.html
@@ -21,8 +21,8 @@
       </a>
         <ul v-if="isLoggedIn">
           <!-- <li><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Services</a></li> -->
+          <li><a href="#">About</a></li> -->
+          <li><a href="employee-portal/index.html" v-if="user_role == 'A' || user_role == 'C' || user_role == 'E'">Employee Portal</a></li> 
           <li><a href="myaccount/index.html">My Account</a></li>
         </ul>
         <ul v-else>
@@ -46,7 +46,8 @@
   createApp({
     data() {
       return {
-        isLoggedIn: isLoggedIn()
+        isLoggedIn: isLoggedIn(), 
+        user_role: sessionStorage.getItem('user_role')
       };
     },
     methods: {
