Added the dd-options endpoint, and added in the db init script an option for contacted for verification in the verifications table

--- a/front-end/index.html
+++ b/front-end/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Alex Bank</title>
   <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-  <link rel="icon" type="image/x-icon" href="img/alex_bank.ico" />
+  <link rel="icon" type="image/x-icon" href="img/favicon.ico" />
   <meta name="theme-color" content="rgb(131, 152, 162)" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="src/style.css">
