--- a/front-end/signup/index.html
+++ b/front-end/signup/index.html
@@ -102,7 +102,7 @@
                   return;
                 }
 
-                const response = await fetch(API_BASE_URL + "/signup", {
+                const response = await fetch(API_BASE_URL + "/signup/", {
                   method: "POST",
                   headers: {
                     "Content-Type": "application/json"
