--- a/front-end/index.html
+++ b/front-end/index.html
@@ -22,7 +22,7 @@
         <ul v-if="isLoggedIn">
           <!-- <li><a href="#">Home</a></li>
           <li><a href="#">About</a></li> -->
-          <li><a href="employee-portal/index.html" v-if="user_role == 'A' || user_role == 'C' || user_role == 'E'">Employee Portal</a></li> 
+          <li><a href="employee-portal/index.html" v-if="['A', 'C', 'E'].includes(user_role)">Employee Portal</a></li> 
           <li><a href="myaccount/index.html">My Account</a></li>
         </ul>
         <ul v-else>
