--- a/front-end/myaccount/index.html
+++ b/front-end/myaccount/index.html
@@ -26,7 +26,7 @@
         </nav>
 
         <div v-if="isLoggedIn" class="content">
-            <h1>Hello, {{first_name}} {{last_name}}!</h1> 
+            <h1>Employee Portal, {{first_name}} {{last_name}}!</h1> 
             <h3>Account ID: {{account_id}}</h3> <br>
             <button v-on:click="LogOut()">Log Out</button>
         </div>
