--- a/front-end/employee-portal/index.html
+++ b/front-end/employee-portal/index.html
@@ -20,7 +20,8 @@
               <img src="../img/alex_bank.png" alt="Logo">
             </a>
               <ul>
-                <li><a href="../login/index.html">Log In</a></li>
+                <li><a v-if="!isLoggedIn" href="../login/index.html">Log In</a></li>
+                <li><a v-if="isLoggedIn" href="../myaccount/index.html">My Account</a></li>
               </ul>
           </div>
         </nav>
@@ -29,13 +30,21 @@
             <h1>Employee Portal</h1> 
             <h3>Logged in as {{first_name}} {{last_name}} (Account ID: {{account_id}})</h3> <br>
 
-            <h2>Unverified Accounts</h2>
+            <div class="button-row">
+                <h2>Unverified Accounts</h2> 
+                <div class="search-container">
+                    <input type="text" id="search-input" placeholder="Go to Account ID..." />
+                    <button id="search-button" @click="performSearch">
+                        <img src="../img/magnifying-glass-solid.svg" alt="Search">
+                    </button>
+                </div>
+            </div>
             <div class="carousel-container">
-                <a href="page1.html" class="carousel-card" v-for="account in unverified_accounts">
+                <a :href="'verification.html?account_id='+account.account_id" class="carousel-card" v-for="account in unverified_accounts">
                     <div class="account-id">Account ID: {{account.account_id}}</div>
                     <div class="first-name">{{account.first_name}}</div>
-                    <div class="last-name">{{account.last_name}}</div>
-                    <div class="role-group">{{account.user_role}} | {{account.account_group}}</div>
+                    <div class="last-name">{{account.last_name}} <abbr :title="account.verification">{{account.verification_emoji}}</abbr></div>
+                    <div class="role-group">{{account.user_role}} | <abbr :title="account.account_group_description">{{account.account_group}}</abbr></div>
                     <div class="create-date">Created on: {{account.created_dt}}</div>
                 </a>
                 <!-- Add more cards as needed -->
@@ -47,7 +56,7 @@
         </div>
 
         <div v-else class="content">
-            You are not logged in. 
+            You are not logged in or do not have access to this page. 
         </div>
 
     </div>
@@ -83,6 +92,12 @@
                         this.unverified_accounts = data;
                     } catch (error) {
                         console.error('Error fetching unverified accounts:', error);
+                    }
+                }, 
+                performSearch() {
+                    const query = document.getElementById('search-input').value;
+                    if (query) {
+                        window.location.href = `verification.html?account_id=${encodeURIComponent(query)}`;
                     }
                 }
             }
