--- a/front-end/employee-portal/index.html
+++ b/front-end/employee-portal/index.html
@@ -98,7 +98,7 @@
                 performSearch() {
                     const query = document.getElementById('search-input').value;
                     if (query) {
-                        window.location.href = `verification.html?account_id=${encodeURIComponent(query)}`;
+                        window.location.href = `account.html?account_id=${encodeURIComponent(query)}`;
                     }
                 }
             }
