Added a slightly better front page

--- a/front-end/index.html
+++ b/front-end/index.html
@@ -32,12 +32,16 @@
     </div>
   </nav>
 
-  <div class="content">
-    <h1>Welcome to Alex Bank</h1>
-    <div>
-      <p v-if="isLoggedIn">User is logged in</p>
-      <p v-else>User is not logged in</p>
-    </div>
+  <img width="100%" src="img/office.png">
+  <div class="content" style="margin-top: 0px !important; text-align: justify;">
+    <h1>Your Gateway to Innovative Financial Solutions</h1>
+        <p>Welcome to Alex Bank, where innovation meets accessibility. As a forward-thinking private bank, we are dedicated to providing tailored financial services that cater to a diverse range of clients. At Alex Bank, we believe that everyone deserves access to high-quality financial products, which is why we specialize in offering Over-the-Counter (OTC) services of small value, making sophisticated financial instruments available to a broader audience.</p>
+        <h2>Our Products</h2>
+          <p><b>Loans:</b> Flexible and personalized loan options designed to meet your unique financial needs, whether you're looking to fund a new business venture, consolidate debt, or make a significant purchase.</p>
+          <p><b>Unconventional Derivatives:</b> Explore innovative and customized derivative products that can help you manage risk and leverage opportunities in the financial markets. Our expert team is here to guide you through the complexities and benefits of these instruments.</p>
+          <p><b>Private Equity Shares:</b> Gain access to exclusive investment opportunities with our private equity share offerings. Invest in promising private companies and benefit from potential high returns, all with the support and expertise of Alex Bank.</p>
+        <h2>Contact Us</h2>
+          <p>Ready to take the next step? Reach out to our team today to learn more about how Alex Bank can help you achieve your financial objectives. Visit our website or contact us directly to speak with one of our knowledgeable representatives.</p>
   </div>
 </div>
 
