--- a/front-end/index.html
+++ b/front-end/index.html
@@ -22,10 +22,12 @@
         <ul v-if="isLoggedIn">
           <!-- <li><a href="#">Home</a></li>
           <li><a href="#">About</a></li> -->
+          <li><a href="products/index.html">Products</a></li>
           <li><a href="employee-portal/index.html" v-if="['A', 'C', 'E'].includes(user_role)">Employee Portal</a></li> 
           <li><a href="myaccount/index.html">My Account</a></li>
         </ul>
         <ul v-else>
+          <li><a href="products/index.html">Products</a></li>
           <li><a href="signup/index.html">Sign Up</a></li>
           <li><a href="login/index.html">Log In</a></li>
         </ul>
