--- a/front-end/products/info.html
+++ b/front-end/products/info.html
@@ -165,7 +165,7 @@
                 alert('Failed to submit application. Please check your inputs.');
             }
         } catch (error) {
-            console.error('Error fetching product categories:', error);
+            console.error('Error submitting the application:', error);
         }
       }
     }
