--- a/front-end/employee-portal/product.html
+++ b/front-end/employee-portal/product.html
@@ -275,6 +275,13 @@
                     }
                 }, 
                 async changeStatus (new_status) {
+                    if (new_status == 'APR') {
+                        if (this.init_product_det.amount == null || this.init_product_det.product_start_date == null 
+                        || this.init_product_det.product_end_date == null || this.init_product_det.yield_ == null || this.init_product_det.expected_revenue == null) {
+                            alert("You cannot approve a product without valid amount, start/end date, yield, or expected revenue");
+                            return ;
+                        }
+                    }
                     const response = await fetch(`${API_BASE_URL}/product/instance/${this.product_uid}/status/${new_status}?usr_account_id=${this.usr_account_id}`, {
                             method: "PATCH", 
                             headers: {
