--- a/front-end/products/info.html
+++ b/front-end/products/info.html
@@ -73,10 +73,10 @@
                 </div>
             </form>
         </div>
-        <br>
-        <h3>Terms and Conditions</h3>
-        <p v-html="product_info.terms_and_conditions"></p>
     </div>
+    <br>
+    <h3>Terms and Conditions</h3>
+    <span v-html="product_info.terms_and_conditions"></span>
   </div>  
   <div v-else class="content">
     <div style="text-align: center; color: red;"><h2>This product does not exist.</h2></div>
