Account Verification Through Email

--- a/front-end/employee-portal/product.html
+++ b/front-end/employee-portal/product.html
@@ -348,7 +348,7 @@
                         alert("Error updating the product details");
                         return ;
                     }
-                    alert("Product details updated succesfully!")
+                    alert("Product details updated succesfully!");
                     widnow.location.reload();
                 }, 
                 async updateProductActuals() {
@@ -376,7 +376,7 @@
                         alert("Error updating the product actuals");
                         return ;
                     }
-                    alert("Product actuals updated succesfully!")
+                    alert("Product actuals updated succesfully!");
                     widnow.location.reload();
                 }
             }
