--- a/front-end/index.html
+++ b/front-end/index.html
@@ -10,6 +10,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="src/style.css">
   <script src="src/functions.js"></script>
+  <style>
+    img.full-width {
+      width: 100%;
+      margin-top: 74px;
+      transition: width 0.3s ease, border-radius 0.3s ease, margin 0.3s ease;
+    }
+    img.scrolled {
+      width: 80%;
+      margin: 74px 10% 0 10%;
+      border-radius: 15px;
+      display: block;
+    }
+  </style>
 </head>
 
 <body>
@@ -34,8 +47,8 @@
     </div>
   </nav>
 
-  <img width="100%" src="img/office.png">
-  <div class="content" style="margin-top: 0px !important; text-align: justify;">
+  <img id="main-image" class="full-width" src="img/office.png">
+  <div class="content" style="margin-top: 0px !important; text-align: justify; padding-left: 0px !important; padding-right: 0px !important;">
     <h1>Your Gateway to Innovative Financial Solutions</h1>
         <p>Welcome to Alex Bank, where innovation meets accessibility. As a forward-thinking private bank, we are dedicated to providing tailored financial services that cater to a diverse range of clients. At Alex Bank, we believe that everyone deserves access to high-quality financial products, which is why we specialize in offering Over-the-Counter (OTC) services of small value, making sophisticated financial instruments available to a broader audience.</p>
         <h2>Our Products</h2>
@@ -60,6 +73,15 @@
       // methods
     }
   }).mount('#app');
+
+  window.addEventListener('scroll', function() {
+    const img = document.getElementById('main-image');
+    if (window.scrollY > 50) { // Adjust the scroll value as needed
+      img.classList.add('scrolled');
+    } else {
+      img.classList.remove('scrolled');
+    }
+  });
 </script>
 </body>
 </html>
