Made changes to the DB - there is now agree and disagree status. Contracts can be digitally signed by teh customer from the front end.

--- a/front-end/employee-portal/index.html
+++ b/front-end/employee-portal/index.html
@@ -81,6 +81,14 @@
                         </a>
                     </div>
                 </div> -->
+
+                Let's see a bit more info. <div class="info">
+                    <img src="../assets/circle-info-solid.svg" class="info-icon" alt="Info icon">
+                    <span class="extra-info">
+                        A little column extra info. Aaand just a little bit more A little column extra info. Aaand just a <br>
+                        little bit more 
+                    </span>
+                </div>                
             </div>
         </div>
 
