--- a/front-end/login/index.html
+++ b/front-end/login/index.html
@@ -30,7 +30,7 @@
             <a href="../signup/index.html">Don't have an account? Sign Up</a> <br><br>
 
             <form @submit.prevent="LogIn">
-                <label for="account_id">Account Id:</label> <br>
+                <label for="account_id">Account ID:</label> <br>
                 <input type="text" id="account_id" v-model="account_id"> <br>
                 <label for="password">Password:</label> <br>
                 <input type="password" id="password" v-model="password"> <br>
