--- a/front-end/employee-portal/product.html
+++ b/front-end/employee-portal/product.html
@@ -66,25 +66,59 @@
 
             <div class="emp-portal-content">
                 <div v-if="product_info != null">
-                    <h2>{{product_info.name}}</h2>
+                    <h2>{{product_info.name}} <div class="info">
+                        <img v-if="product_data.notifications=='Y'" src="../assets/bell-solid.svg" class="info-icon" alt="Info icon">
+                        <img v-else-if="product_data.notifications=='P'" src="../assets/bullhorn-solid.svg" class="info-icon" alt="Info icon">
+                        <img v-else-if="product_data.notifications=='N'" src="../assets/bell-slash-solid.svg" class="info-icon" alt="Info icon">
+                        <span v-if="product_data.notifications=='Y'" class="extra-info">
+                            Receives notifications for every status change. <br>
+                            <a @click="changeNotificationPreferences('P')" style="cursor: pointer;">Important Only</a> <a @click="changeNotificationPreferences('N')" style="cursor: pointer;">No Notifications</a>
+                        </span>
+                        <span v-else-if="product_data.notifications=='P'" class="extra-info">
+                            Receives notifications only for important updates. <br>
+                            <a @click="changeNotificationPreferences('Y')" style="cursor: pointer;">All Notifications</a> <a @click="changeNotificationPreferences('N')" style="cursor: pointer;">No Notifications</a>
+                        </span>
+                        <span v-else-if="product_data.notifications=='N'" class="extra-info">
+                            Client isn't receiving any notifications for this product. <br>
+                            <a @click="changeNotificationPreferences('Y')" style="cursor: pointer;">All Notifications</a> <a @click="changeNotificationPreferences('P')" style="cursor: pointer;">Important Notifications</a>
+                        </span>
+                    </div> </h2>
                     <span>Prouct UID: {{product_data.product_uid}} | Account ID: <a :href="'account.html?account_id='+product_data.account_id">{{product_data.account_id}}</a> </span>
                     <div class="two-column-container">
                         <div class="column first-column">
                             <div>
                                 <ul class="StepProgress">
-                                    <li v-for="status in product_data.statuses.slice(0, -1)" class="StepProgress-item is-done"><strong>{{status.status_name}}</strong>
-                                        {{status.status_update_dt}}
+                                    <li v-for="status in product_data.statuses.slice(0, -1)" class="StepProgress-item is-done"><strong>{{status.status_name}} <div class="info">
+                                        <img src="../assets/circle-info-solid.svg" class="info-icon" alt="Info icon">
+                                        <span class="extra-info">
+                                            {{status.status_update_dt}} <br>
+                                            <a :href="'account.html?account_id='+status.update_user">{{status.first_name}} {{status.last_name}}</a>
+                                        </span>
+                                    </div></strong> 
+                                    <div v-if="status.update_note">{{status.first_name}} {{status.last_name}} [<span style="color: rgb(255, 165, 0)">{{status.public_yn == 'Y' ? 'Public' : 'Internal'}}</span>]: {{status.update_note}}</div>
                                     </li>
-                                    <li v-if="product_status_progression.length != 0" class="StepProgress-item current"><strong>{{product_data.statuses.at(-1).status_name}}</strong>
-                                        {{product_data.statuses.at(-1).status_update_dt}}
+                                    <li v-if="product_status_progression.length != 0" class="StepProgress-item current"><strong>{{product_data.statuses.at(-1).status_name}} <div class="info">
+                                        <img src="../assets/circle-info-solid.svg" class="info-icon" alt="Info icon">
+                                        <span class="extra-info">
+                                            {{product_data.statuses.at(-1).status_update_dt}} <br>
+                                            <a :href="'account.html?account_id='+product_data.statuses.at(-1).update_user">{{product_data.statuses.at(-1).first_name}} {{product_data.statuses.at(-1).last_name}}</a>
+                                        </span>
+                                    </div></strong>
+                                    <div v-if="product_data.statuses.at(-1).update_note">{{product_data.statuses.at(-1).first_name}} {{product_data.statuses.at(-1).last_name}} [<span style="color: rgb(255, 165, 0)">{{product_data.statuses.at(-1).public_yn == 'Y' ? 'Public' : 'Internal'}}</span>]: {{product_data.statuses.at(-1).update_note}}</div>
                                     </li>
-                                    <li v-else class="StepProgress-item is-done"><strong>{{product_data.statuses.at(-1).status_name}}</strong>
-                                        {{product_data.statuses.at(-1).status_update_dt}}
+                                    <li v-else class="StepProgress-item is-done"><strong>{{product_data.statuses.at(-1).status_name}} <div class="info">
+                                        <img src="../assets/circle-info-solid.svg" class="info-icon" alt="Info icon">
+                                        <span class="extra-info">
+                                            {{product_data.statuses.at(-1).status_update_dt}} <br>
+                                            <a :href="'account.html?account_id='+product_data.statuses.at(-1).update_user">{{product_data.statuses.at(-1).first_name}} {{product_data.statuses.at(-1).last_name}}</a>
+                                        </span>
+                                    </div></strong>
+                                    <div v-if="product_data.statuses.at(-1).update_note">[<span style="color: rgb(255, 165, 0)">{{product_data.statuses.at(-1).public_yn == 'Y' ? 'Public' : 'Internal'}}</span>] {{product_data.statuses.at(-1).update_note}}</div>
                                     </li>
                                     <li v-for="status in product_status_progression" class="StepProgress-item"> <strong>{{status.status_name}}</strong>
                                     </li>
                                 </ul> 
-                                </div>
+                            </div>
                         </div>
                         <div class="column second-column">
                             <div class="card">
@@ -94,11 +128,22 @@
                             </div> <br>
                             <div class="card">
                                 <h3 class="card-title">Available Product Actions</h3>
-                                <div class="button-row" style="width: 100%; padding: 0px;">
-                                    <span v-if="available_actions.length == 0">There are no more actions that could be performed on this product.</span>
-                                    <button v-for="action in available_actions" class="action-button" @click="changeStatus(action.status_code)">{{action.status_name}}</button>
+                                <div v-if="available_actions.length == 0">
+                                    <span>There are no more actions that could be performed on this product.</span>
+                                </div>
+                                <div v-else style="width: 100%">
+                                    <label>Write a note <i>(opt.)</i>: </label>
+                                        <select style="width: auto;" v-model="public_note_yn">
+                                            <option value="Y">Public</option>
+                                            <option value="N">Internal</option>
+                                        </select> <br>
+                                    <textarea style="width: 100%; max-width: none;" v-model="update_notes"> </textarea> <br>
+                                    <div class="button-row" style="width: 100%; padding: 0px;">
+                                        <button v-for="action in available_actions" class="action-button" @click="changeStatus(action.status_code)">{{action.status_name}}</button>
+                                    </div> 
                                 </div>
                             </div> <br>
+
                             <div class="card">
                                 <h3 class="card-title">Product Details</h3>
                                 <button class="pencil-button" @click="toggleEdit1">
@@ -147,6 +192,7 @@
                                     </div>
                                 </div>
                             </div> <br>
+
                             <div v-if="['DUE', 'CMP', 'ORD', 'WOF'].includes(product_data.statuses.at(-1).status_code)" class="card">
                                 <h3 class="card-title">Actuals</h3>
                                 <button class="pencil-button" @click="toggleEdit2">
@@ -167,7 +213,16 @@
                                         Update Product Actuals
                                     </button>
                                 </div>
-                            </div> <br>
+                            </div> <br v-if="['DUE', 'CMP', 'ORD', 'WOF'].includes(product_data.statuses.at(-1).status_code)">
+
+                            <div v-if="product_det.contract_id != null" class="card">
+                                <h3 class="card-title">Contract</h3>
+                                <details style="width: 100%;">
+                                    <summary>View Contract</summary>
+                                    <span><iframe id="contract" width="600" height="800px" type="application/pdf"></iframe></span>
+                                </details>
+                            </div> <br v-if="product_det.contract_id != null">                   
+
                             <div class="card">
                                 <details>
                                     <summary>Terms and Conditions</summary>
@@ -213,7 +268,9 @@
                         init_product_det: {}, 
                         product_det: {}, 
                         init_actuals: {}, 
-                        actuals: {}
+                        actuals: {}, 
+                        update_notes: null, 
+                        public_note_yn: 'Y'
                     };
                 },
                 methods: {
@@ -314,10 +371,45 @@
                                 "actual_revenue": this.product_data.actual_revenue, 
                                 "actual_end_date": this.product_data.actual_end_date
                             };
+
+                            this.loadContract();
+                            console.log(this.product_data);
+
                         } catch (error) {
                             console.error('Error loading product information:', error);
                         }
                     }, 
+                    async loadContract() {
+                        if (this.product_det.contract_id) {
+                            const contractUrl = `${API_BASE_URL}/product/instance/${this.product_uid}/contract/?usr_account_id=${this.usr_account_id}`;
+                            const response = await fetch(contractUrl, {
+                                method: "GET",
+                                headers: {
+                                    "Content-Type": "application/json",
+                                    "token": sessionStorage.getItem("token")
+                                }
+                            });
+                            if (!response.ok) {
+                                throw new Error('Network response was not ok');
+                            }
+                            const blob = await response.blob();
+
+                            // Create a URL for the blob
+                            const blobUrl = window.URL.createObjectURL(blob);
+                            
+                            // Get the existing iframe element by ID
+                            const iframe = document.getElementById('contract');
+                            if (iframe) {
+                                iframe.style.width = '100%';
+                                iframe.src = blobUrl;
+                                
+                                // Release the URL object when the iframe is no longer needed
+                                iframe.onload = () => window.URL.revokeObjectURL(blobUrl);
+                            } else {
+                                console.error('Iframe with id "contract" not found');
+                            }
+                        }
+                    },
                     async changeStatus (new_status) {
                         if (new_status == 'APR') {
                             if (this.init_product_det.amount == null || this.init_product_det.product_start_date == null 
@@ -326,12 +418,21 @@
                                 return ;
                             }
                         }
+                        body = {}
+                        if (this.update_notes != null) {
+                            body = {
+                                "content": this.update_notes, 
+                                "public_yn": this.public_note_yn
+                            }
+                        }
+                        console.log(body);
                         const response = await fetch(`${API_BASE_URL}/product/instance/${this.product_uid}/status/${new_status}?usr_account_id=${this.usr_account_id}`, {
                                 method: "PATCH", 
                                 headers: {
                                     "Content-Type": "application/json",
                                     "token": sessionStorage.getItem("token")
-                                }
+                                }, 
+                                body: JSON.stringify(body)
                             });
                             const data = await response.json();
                             if (!response.ok) {
@@ -343,6 +444,24 @@
                             alert("Product status successfully updated!");
                             window.location.reload();
                     }, 
+                    async changeNotificationPreferences (new_preference) {
+                        const response = await fetch(`${API_BASE_URL}/product/instance/${this.product_uid}/notifications/${new_preference}?usr_account_id=${this.usr_account_id}`, {
+                            method: "PUT", 
+                            headers: {
+                                "Content-Type": "application/json",
+                                "token": sessionStorage.getItem("token")
+                            }
+                        });
+
+                        const data = await response.json();
+                        if (!response.ok) {
+                            console.error('Error: ', data);
+                            alert("Error updating product notification preferences");
+                            return;
+                        }
+
+                        window.location.reload();
+                    },
                     toggleEdit1 () {
                         if (this.isEditable1) {
                             if (JSON.stringify(this.product_det) !== JSON.stringify(this.init_product_det)) {
@@ -393,7 +512,7 @@
                             return ;
                         }
                         alert("Product details updated succesfully!");
-                        widnow.location.reload();
+                        window.location.reload();
                     }, 
                     async updateProductActuals() {
                         const differences = {};
